<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>jpos-springboot</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>jpos-springboot</name>
	<description>jPOS in Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>annotationProcessor</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
		<dependency>
    		<groupId>io.github.cdimascio</groupId>
    		<artifactId>java-dotenv</artifactId>
    		<version>5.2.2</version>
		</dependency>	

		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
		<dependency>
    		<groupId>org.hibernate</groupId>
    		<artifactId>hibernate-core</artifactId>
    		<version>7.0.4.Final</version>
    		<type>pom</type>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
		<dependency>
    		<groupId>org.mariadb.jdbc</groupId>
    		<artifactId>mariadb-java-client</artifactId>
    		<version>3.5.4</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.jpos/jpos -->
		<dependency>
    		<groupId>org.jpos</groupId>
    		<artifactId>jpos</artifactId>
    		<version>2.1.7</version>
		</dependency>

		<dependency>
    		<groupId>nz.co.breakpoint</groupId>
    		<artifactId>jmeter-iso8583</artifactId>
    		<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-activemq</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-all -->
		<dependency>
    		<groupId>org.apache.activemq</groupId>
    		<artifactId>activemq-all</artifactId>
    		<version>6.1.7</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
    				<jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArguments>
  				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>jpos-ee</id>
			<name>jPOS EE Repository</name>
			<url>https://jpos.org/maven/</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.ai</groupId>
				<artifactId>spring-ai-bom</artifactId>
				<version>1.0.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
